--- a/index.html
+++ b/index.html
@@ -29,27 +29,33 @@
     <section class="hero"></section>
     <!--Content-->
     <section class="content">
-        <div id="search-engine-optimization" class ="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt= "The importance of SEO" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Increasing your online reputation" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="The power of social media for marketing" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
+        <article id="search-engine-optimization" class="horiseon-tools">
+            <img src="./assets/images/search-engine-optimization.jpg" alt= "The importance of SEO" class="float-left" />
+            <div>
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+            </div>
+        </article>
+        <article id="online-reputation-management" class="horiseon-tools">
+            <img src="./assets/images/online-reputation-management.jpg" alt= "Increasing your online reputation" class="float-right" />
+            <div>
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                </p>
+            </div>
+        </article>
+        <article id="social-media-marketing" class="horiseon-tools">
+            <img src="./assets/images/social-media-marketing.jpg" alt= "The power of social media for marketing" class="float-left" />
+            <div>
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
+            </div>
+        </article>
     </section>
     <!--Benefits-->
     <section class="benefits">
