--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
         </article>
     </section>
     <!--Benefits-->
-    <section class="benefits">
-        <div class="benefit-lead">
+    <section class="benefit">
+        <div class="benefits benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefits benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefits benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""/>
             <p>
