refactoring final edits and README description with TOC

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
     <!--Navigation-->
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<span style= "color:#d9dcd6">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -29,7 +29,7 @@
     <section class="hero"></section>
     <!--Content-->
     <section class="content">
-        <article id="search-engine-optimization" class="horiseon-tools">
+        <article id="search-engine-optimization" class="content-tools">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "The importance of SEO" class="float-left" />
             <div>
                 <h2>Search Engine Optimization</h2>
@@ -38,7 +38,7 @@
                 </p>
             </div>
         </article>
-        <article id="online-reputation-management" class="horiseon-tools">
+        <article id="online-reputation-management" class="content-tools">
             <img src="./assets/images/online-reputation-management.jpg" alt= "Increasing your online reputation" class="float-right" />
             <div>
                 <h2>Online Reputation Management</h2>
@@ -47,7 +47,7 @@
                 </p>
             </div>
         </article>
-        <article id="social-media-marketing" class="horiseon-tools">
+        <article id="social-media-marketing" class="content-tools">
             <img src="./assets/images/social-media-marketing.jpg" alt= "The power of social media for marketing" class="float-left" />
             <div>
                 <h2>Social Media Marketing</h2>
@@ -59,21 +59,21 @@
     </section>
     <!--Benefits-->
     <section class="benefit">
-        <div class="benefits benefit-lead">
+        <div class="benefits">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefits benefit-brand">
+        <div class="benefits">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefits benefit-cost">
+        <div class="benefits">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""/>
             <p>
